--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-title: Varun Ramaprasad
+title:
 description: Photonics / Optics • Metasurfaces • Nonlinear optics • Computational EM
-theme: minima
+theme: cayman
