--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-title:
+title: Varun Ramaprasad
 description: Photonics / Optics • Metasurfaces • Nonlinear optics • Computational EM
 theme: minima
