--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Varun Ramaprasad
+title: Research portfolio
 description: Optics • Metasurfaces • Nonlinear optics • Computational EM
 theme: minima
 
