--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-title: Research portfolio
+title: Varun Ramaprasad
 description: Optics • Metasurfaces • Nonlinear optics • Computational EM
 theme: minima
